--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,13 +5,13 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="SafeAir Navigator - Smart navigation with pollution-aware routing" />
+    <meta name="description" content="CityLife Nexus - Smart navigation with pollution-aware routing" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
      crossorigin=""/>
-    <title>SafeAir Navigator</title>
+    <title>CityLife Nexus</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
